--- a/task8/task8c.css
+++ b/task8/task8c.css
@@ -319,3 +319,27 @@ img {
 .cole {
     border: none;
 }
+.yincang {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.7;
+    display: none;
+    color: #fff;
+    padding: 4rem;
+    font-size: 1.6rem;  
+}
+.yincang> .p1 {
+    text-align: center;
+}
+.yincang> .p2 {
+    text-indent: 2em;
+} 
+.col {
+    position: relative;
+}
+.col:hover .yincang {
+    display: block;
+}
