--- a/task9gai/task9a.css
+++ b/task9gai/task9a.css
@@ -8,22 +8,29 @@
   body {
       background-color: #fafafa;
   }
+  .container {
+      max-width: 1200px;
+  }
 .toptop {
-    width: 100%;
     height: 4rem;
-    background-color: #fff;
-    display: flex;
+    /* background-color: #fff; */
+    /* display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between; */
     color: #29b078;
-    padding: 0 18.75%;
+    /* padding: 0 18.75%; */
 }
 .toplogo {
     width: 10rem;
     height: 4rem;
+    float: right;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+.toptip {
+    float: left;
+    margin-top: 10px;
 }
 .logo1 {
     width: 2.6rem;
@@ -43,25 +50,13 @@
     background-image: url(./image/css_sprites.png);
     background-position: -153px -98px;
 }
-.navtop {
-    width: 100%;
+.list {
     height: 10rem;
-    background-color: #29b078;
-    border-radius:0 !important;
-    margin: 0 !important;
+    background-color: #26a26f;
+}
+.list1 {
     display: flex;
     justify-content: flex-end;
-    padding: 0 18.75%;
-    /* justify-content: space-around; */
-}
-.navcontent {
-    width: 50rem;
-    height: 10rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-right: -38px;
-   
 }
 .a1 {
     color: #fff;
@@ -69,6 +64,7 @@
     line-height: 10rem;
     width: 10rem;
     text-decoration:none !important;
+    margin-right: -2.9rem;
 }
 .navtips {
     height: 9.6rem;
@@ -88,18 +84,16 @@ a:hover .border {
 img {
     width: 100%;
 }
-.contenter {
-    padding: 0 18.75%;
-}
+
 .colbox {
     margin: 10rem 0;
-    height: 20rem;
-    padding: 0;
+    /* height: 20rem; */
+    padding: 5rem;
 }
 .colborder {
     border-left: 1px dashed #dedede;
-    float: right;
-    clear: right;
+    /* float: right;
+    clear: right; */
 }
 .rocket {
     margin: 0 auto;
@@ -160,12 +154,11 @@ img {
     /* border: 1px solid red; */
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
     align-items: center;
 }
 .howlearn {
     width: 100%;
-    padding: 0 18.75%;
+    /* padding: 0 18.75%; */
     display: flex;
     flex-wrap: wrap;
 }
@@ -182,11 +175,13 @@ img {
 }
 .learntip {
     width: 15.5rem;
+    margin-left: 0.5rem;
     font-size: 1.4rem;
 }
 .arrow {
     width: 3.2rem;
     height: 3rem;
+    margin: 0 0.5rem;
     background-image: url(./image/css_sprites.png);
     background-position: -93px -93px;
 }
@@ -218,9 +213,11 @@ img {
     box-shadow: 0 0 2px #e2e2e2 inset;
 }
 .studentpage {
-    padding: 7rem 18.75%;
+    padding: 7rem 0;
 }
-
+.student9 {
+    padding: 0 1.5rem;
+}
 .firm {
     width: 100%;
     height: 10rem;
@@ -233,7 +230,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 18.75%;
+    
     background-color: #fff;
 }
 .firmlogoa {
@@ -254,11 +251,7 @@ img {
    max-height: 100%;
 }
 .firmlogoa:hover {
-        
         box-shadow: 0px 1px 13px 0px rgba(8, 1, 3, 0.1);
-        
-    
-      
 }
 .mylink {
     width: 100%;
@@ -267,30 +260,31 @@ img {
     align-items: center;
     justify-content: center;
     font-size: 1.8rem;
-    padding: 0 18.75%;
+ 
 }
 .mylinks {
-    padding: 0 18.75%;
+    padding:0 27px;
+}
+.link1, .link2 {
+    width: 100%;
 }
 ul {
-    height: 3rem;
     margin: 0;
     display: flex;
-    justify-content: space-around;
-    /* list-style: none; */
+    justify-content: space-between;
 }
 li>a {
     text-decoration: none !important;
     color: black;
 }
 .footer {
-    width: 100%;
-    height: 2 1rem;
+    
+    height: 16rem;
     background-color: #29b078;
     color: #fff;
     font-size: 1.4rem;
     position: relative;
-    padding: 0 18.75%;
+    /* padding: 0 18.75%; */
 }
 .footcol {
     padding: 0;
@@ -310,14 +304,24 @@ li>a {
 .footbox10 {
     font-size: 1.2rem;   
     text-align: center;
+    background-color: #29b078;
+    border-top: 1px solid #32c086;
+    color: #fff;
+}
+.myfooter {
+    width: 100%;
+    background: #29b078;
 }
 .footercol {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 0;
 }
 .QRcode {
-    max-width: 9rem;
-    max-height: 9rem;
+    max-width: 8.5rem;
+    /* max-height: 8.5rem; */
 } 
 .abc>li{
     list-style: circle;
@@ -340,7 +344,7 @@ li>a:hover {
 }
 
 
-@media all and (max-width:1200px) {
+@media all and (max-width:1000px) {
     .peoplebox {
     display: flex;
     align-items: center;
@@ -351,7 +355,7 @@ li>a:hover {
     }
     .colbox {
         width: 100%;
-        height: 10rem;
+        border: none;
     }
     .colstudent {
         width: 100%;
@@ -364,11 +368,7 @@ li>a:hover {
         display: block;
     }
     .a1 {
-        width: 5rem;
-    }
-    .mylinks>ul {
-        /* display: inline ; */
-        text-align: center;
+        width: 10rem;
     }
     .footer {
         height: 48rem;
@@ -379,19 +379,15 @@ li>a:hover {
     .navcontent {
         margin: 0;
     }
-    .mylink {
-        justify-content: flex-start
+    ul {
+        flex-direction: column;
+        list-style: none;
     }
     li {
-        text-align: left;
+        margin: 1px 0;
+    }
+    .mylinks {
+        display: flex;
+        align-items: center;
     }
 }
-@media all and (max-width:1000px) {
-    .mylinks>ul {
-        display: inline ;
-        text-align: center;
-    }
-}
-/* .box4salary1 {
-    border-bottom: 1px solid black;
-} */
