--- a/task9gai/task9b.css
+++ b/task9gai/task9b.css
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-right: -38px;
+    margin-right: -41px;
    
 }
 .a1 {
@@ -114,6 +114,7 @@ a:hover .border {
     width: 72%;
     height: 100rem;
     background-color: #fff;
+    margin-bottom: 10rem;
 }
 .left-box1 {
     height: 6rem;
@@ -176,10 +177,11 @@ p {
     font-size: 1.4rem;
     line-height: 2.8rem;
     margin-top: 2.8rem;
+    padding: 0 15px;
 }
 .footer {
     width: 100%;
-    height: 2 1rem;
+    height: 16rem;
     background-color: #29b078;
     color: #fff;
     font-size: 1.4rem;
@@ -204,14 +206,17 @@ p {
 .footbox10 {
     font-size: 1.2rem;   
     text-align: center;
+    background-color: #29b078;
+    border-top: 1px solid #32c086;
+    color: #fff;
 }
 .footercol {
-    text-align: center;
+    /* text-align: center; */
     padding: 0;
 }
 .QRcode {
-    max-width: 9rem;
-    max-height: 9rem;
+    max-width: 8.5rem;
+    /* max-height: 9rem; */
 } 
 
 .footcol>div>a {
@@ -234,6 +239,7 @@ p {
     .right-thing {
         width: 100%;
         height: auto;
+        
     }
     .righttop {
         flex-direction: column;
