--- a/task999/task9a.css
+++ b/task999/task9a.css
@@ -164,7 +164,7 @@ img {
 }
 .number {
     width: 50px;
-    height: 5rem;
+    height: 50px;
     background-color: #fff;
     border: 1px solid #efeeee;
     border-radius: 50%;
