--- a/task999/task9c.css
+++ b/task999/task9c.css
@@ -285,6 +285,7 @@ img {
     font-size: 1.4rem;
     position: relative;
     padding: 0 18.75%;
+    margin-top: 10rem;
 }
 .footcol {
     padding: 0;
