--- a/task11/index.less
+++ b/task11/index.less
@@ -27,7 +27,7 @@
     zoom: 1; 
 }
 .phones() {
-    width: 16%;
+    width: 116px;
     .textcenter;
     border-right: 2px solid @bg_color;
 }  
@@ -36,8 +36,6 @@
     align-items: center;
     // justify-content: space-between;
 }
-
-
 button {
     outline: none;
 }
