--- a/task14/footer.less
+++ b/task14/footer.less
@@ -16,6 +16,7 @@
         }
         .footbox3, .footbox4, .footbox11 {
             margin-top: 40px;
+            margin-bottom: 5px;
         }
         .footbox7 {
             margin-top: 66px;
@@ -27,7 +28,7 @@
             }
         }
         .QRcode {
-            max-width: 85px;
+            max-width: 80px;
             vertical-align: top;
         } 
     }
