--- a/task14/task14.less
+++ b/task14/task14.less
@@ -286,7 +286,7 @@ input {
     justify-content: space-between;
     .student {
         width: 22.41%;
-        padding: 15px 30px 0;
+        padding: 15px 30px 30px;
         background-color: #fff;
         .flexfc;
         .flexcol;
