--- a/task14/task14b.css
+++ b/task14/task14b.css
@@ -153,6 +153,7 @@ input {
 .footer .footcol .footbox4,
 .footer .footcol .footbox11 {
   margin-top: 40px;
+  margin-bottom: 5px;
 }
 .footer .footcol .footbox7 {
   margin-top: 66px;
@@ -166,7 +167,7 @@ input {
   margin-right: 30px;
 }
 .footer .footcol .QRcode {
-  max-width: 85px;
+  max-width: 80px;
   vertical-align: top;
 }
 .ffootbox {
