--- a/task14/task14c.less
+++ b/task14/task14c.less
@@ -10,7 +10,7 @@ body {
 }
 .page3img {
     img {
-        max-width: 100%;
+        width: 100%;
     }
 }
 .main {
@@ -82,6 +82,7 @@ body {
                 }
             }
             .rightbottom {
+                margin-bottom: 180px;
                 .wordbreak;
                 text-indent: 2rem;
                 font-size: 1.4rem;
