--- a/task14/head.less
+++ b/task14/head.less
@@ -33,7 +33,10 @@
 }
 // 导航
 .navtop {
-    height: 10rem;
+    margin: 0;
+    padding: 0;
+    .borderbox;
+    height: 100px;
     padding: 0 18.75%;   
     background-color: #29b078;
    .flexfc;
