--- a/task14/page2PIM.less
+++ b/task14/page2PIM.less
@@ -61,7 +61,7 @@ html {
     }
     .pimbox2 {
         div {
-            padding: 10px;
+            padding: 1%;
             .borderbox;
             .floatl;
             width: 50%;
