--- a/task14/task14.less
+++ b/task14/task14.less
@@ -80,7 +80,7 @@ body {
             }
             .peoplebox1 {
                 .flexfc;
-                margin-top: 30px;
+                margin-top: 39px;
             }
             .peoplebox2 {
                 margin-top: 10px;
@@ -101,6 +101,7 @@ body {
                 .flexfcs;
                 img {
                     margin-right: 5%;
+                    flex-shrink: 0;
                 }
             }
             .box1a {
@@ -108,8 +109,8 @@ body {
                 .flexfc;
             }
             .yuan {
-                width: 70px;
-                height: 70px;
+                width: 60px;
+                height: 60px;
                 color: #29b078;
                 background-color: #fff;
                 border-radius: 50%;
@@ -286,7 +287,7 @@ input {
     justify-content: space-between;
     .student {
         width: 22.41%;
-        padding: 15px 30px 30px;
+        padding: 15px 10px 30px;
         background-color: #fff;
         .flexfc;
         .flexcol;
@@ -418,3 +419,14 @@ input {
         }
     }
 }
+@media all and (min-width:1600px) {
+    .main .page1line2 .learn-box .yuan {
+        width: 70px;
+        height: 70px;
+    }
+}
+// @media all and (max-width:1600px) {
+//     html {
+//         font-size: 58%;
+//     }
+// }
