--- a/task14/task14c.css
+++ b/task14/task14c.css
@@ -40,7 +40,10 @@
   background-position: -153px -98px;
 }
 .navtop {
-  height: 10rem;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100px;
   padding: 0 18.75%;
   background-color: #29b078;
   display: flex;
