--- a/task14/page2PIM.less
+++ b/task14/page2PIM.less
@@ -4,6 +4,9 @@ html {
     font-size: 62.5%;
   
 }
+// .whitenowrap {
+//     white-space: nowrap;
+// }
 .page2pim {
     .posr;
     &:hover .yincang{
@@ -77,6 +80,15 @@ html {
             }
             &:nth-child(2) {
                 border-bottom: none;
+            }
+            &:nth-child(4) {
+                // font-size: 1.1rem;
+                span {
+                    flex-shrink: 0;
+                }
+                b {
+                    flex-shrink: 0;
+                }
             }
             img {
                 padding-left: 10px;
