--- a/task14/task14b.css
+++ b/task14/task14b.css
@@ -382,6 +382,12 @@ html {
 .page2pim .pimbox2 div:nth-child(2) {
   border-bottom: none;
 }
+.page2pim .pimbox2 div:nth-child(4) span {
+  flex-shrink: 0;
+}
+.page2pim .pimbox2 div:nth-child(4) b {
+  flex-shrink: 0;
+}
 .page2pim .pimbox2 div img {
   padding-left: 10px;
 }
