--- a/task14/page2PIM.less
+++ b/task14/page2PIM.less
@@ -71,6 +71,9 @@ html {
             height: 42px;
             border: 1px solid #dadada;
             .flexfc;
+            img {
+                margin-left: 8px;
+            }
             &:nth-child(1) {
                 border-right: none;
                 border-bottom: none;
@@ -81,18 +84,18 @@ html {
             &:nth-child(2) {
                 border-bottom: none;
             }
-            &:nth-child(4) {
-                // font-size: 1.1rem;
-                span {
-                    flex-shrink: 0;
-                }
-                b {
-                    flex-shrink: 0;
-                }
-            }
-            img {
-                padding-left: 10px;
-            }
+        //     &:nth-child(4) {
+        //         // font-size: 1.1rem;
+        //         span {
+        //             flex-shrink: 0;
+        //         }
+        //         b {
+        //             flex-shrink: 0;
+        //         }
+        //     }
+        //     img {
+        //         padding-left: 10px;
+        //     }
         }
         .clearfix;
     }
