--- a/task14/page1.less
+++ b/task14/page1.less
@@ -151,7 +151,7 @@ html {
         padding-left: 1em;
         ul {
             .flexfcs;
-            margin-bottom: 15px;
+            padding-bottom: 15px;
             font-size: 1.4rem;
             li {
                 a {
