--- a/task14/task14.less
+++ b/task14/task14.less
@@ -161,7 +161,7 @@ body {
         // padding-left: 1em;
         ul {
             .flexfcs;
-            margin-bottom: 15px;
+            padding-bottom: 15px;
             font-size: 1.4rem;
             li {
                 a {
