--- a/JS/task2-4/task4/gameover.less
+++ b/JS/task2-4/task4/gameover.less
@@ -22,6 +22,13 @@ header {
     line-height: 10.56vh;
     z-index: 99999;
     background-color: #29bde0;
+    .home {
+        position: absolute;
+        left: 10px;
+       img {
+        max-width: 60%;
+       } 
+     }
 }
 .line1 {
     width: 100%;
